[package]
name = "cargo-libyear"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
cargo_metadata = "0.18.1"
chrono = "0.4.38"
crates_io_api = { version = "0.11.0", features = ["rustls"], default_features = false }
prettytable = "0.10.0"
tqdm = "0.7.0"
