[package]
name = "cargo-libyear"
version = "0.1.0"
edition = "2021"
description = "A simple measure of software dependency freshness"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/HKalbasi/cargo-libyear"

[dependencies]
anyhow = "1.0.83"
cargo_metadata = "0.18.1"
chrono = "0.4.38"
crates_io_api = { version = "0.11.0", features = ["rustls"], default_features = false }
prettytable = "0.10.0"
tqdm = "0.7.0"
